--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>GitHub Blog</title>
+		<title>Streetboy's Blog</title>
 	</head>
 	<body>
 		<nav>
@@ -15,7 +15,6 @@
 		<div class="container">
     		<div class="blurb">
         		<h1>Hi there, I'm streetboy!</h1>
-				<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
