--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@ title: 我的Blog
 <ul>
 　　{% for post in site.posts %} 
 　　　　　　
-	<li>{{ post.date | date_to_string }} <a href="{{ post.url }}">{{ post.title }}</a></li>
+	<li>
+		<a href="{{ post.url }}">{{ post.title }}</a>
+	</li>
 　　
     {% endfor %}
 	
