--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ title: 我的Blog
 　　{% for post in site.posts %} 
 　　　　　　
 	<li>
-		<a href="{{ post.url }}">{{ post.title }}</a>
+		{{ post.date | date_to_string}}<a href="{{ post.url }}">{{ post.title }}</a>
 	</li>
 　　
     {% endfor %}
